--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   flame: ^1.30.1
   flutter_animate: ^4.5.2
   audioplayers: ^6.5.1
+  firebase_core: ^4.2.0
+  cloud_firestore: ^6.0.3
+  firebase_auth: ^6.1.1
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_test:
