--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=C:\FLUTTER FILE\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\drewm\OneDrive\Desktop\sungkatest\sungka
+FLUTTER_APPLICATION_PATH=C:\Users\drewm\OneDrive\Desktop\updatedsungka\Umak-Sungka-Game
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
