--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\flutter
-FLUTTER_APPLICATION_PATH=C:\Ewan\Flutter Projects\Umak-Sungka-Game
+FLUTTER_ROOT=C:\FLUTTER FILE\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\drewm\OneDrive\Desktop\updatedsungka\Umak-Sungka-Game
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
