--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^6.1.1
   firebase_core: ^4.2.0
   flame: ^1.30.1
+  flame_audio: ^2.11.8
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.2
