--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animate: ^4.5.2
+  flutter_launcher_icons: ^0.14.4
   gap: ^3.0.1
   google_fonts: ^6.3.2
   google_sign_in: ^7.2.0
@@ -68,6 +69,8 @@ flutter:
     - assets/audio/sunngka_music.mp3
     - assets/audio/win.mp3
     - assets/empty_board.png
+    - assets/images/assets/traditional_bg.png
+    - assets/images/assets/farm_landscape.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
