--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,9 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/loading.webp
     - assets/bg-mc.wav
-    - assets/rmbg.png
     - assets/images/assets/google.png
     - assets/board1.png
     - assets/audio/move.mp3
@@ -70,8 +68,16 @@ flutter:
     - assets/audio/win.mp3
     - assets/empty_board.png
     - assets/sungka_bg.png
-    - assets/images/assets/auth_bg.png
-    - assets/images/assets/home_bg.png
+    - assets/splashscreen_bg.png
+    - assets/images/assets/board.png
+    - assets/images/assets/home_title.png
+    - assets/images/assets/app_title.png
+    - assets/images/assets/play_button.png
+    - assets/images/assets/p2b.png
+    - assets/images/assets/p2p.png
+    - assets/images/assets/p2f.png
+    - assets/images/assets/adventure.png
+    - assets/images/assets/bg.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
